syntax = "proto3";

package apichat;
option go_package = "apichat/api/chat/v1;v1";

import "google/api/annotations.proto";
import "api/apichat/api/chat/v1/error_reason.proto";
import "api/apichat/api/chat/v1/chat.proto";

// 聊天服务
service Chat {
  // 发消息
  rpc SendMsg(SendMsgRequest) returns(SendMsgReply){
    option (google.api.http) = {
      post: "/chat/msg/send"
      body: "*"
    };
  }

  // timeline 同步消息（适合有本地存储能力的客户端，如APP）
  rpc GetSyncMessage (SyncMessageRequest) returns (SyncMessageReply){
    option (google.api.http) = {
      get: "/chat/msg/sync"
    };
  }

  // 查询会话列表
  rpc GetRecentContactSession(GetRecentSessionRequest) returns(GetRecentSessionReply){
    option (google.api.http) = {
      get: "/chat/session/list"
    };
  }

  // 查询历史消息列表
  rpc GetMsgList(GetMsgListRequest) returns(GetMsgListReply){
    option (google.api.http) = {
      get: "/chat/msg/list"
    };
  }

  // 已读消息回执
  rpc MsgReadAck(MsgReadAckRequest) returns(MsgReadAckReply){
    option (google.api.http) = {
      post: "/chat/msg/read"
      body: "*"
    };
  }
}